--- a/css/main.css
+++ b/css/main.css
@@ -664,6 +664,7 @@ nav {
 
 .ht-welcome {
     background: url('../img/assets/headteacher-welcome.jpg');
+    background-size: cover
     width: 100%;
     height: 300px;
     position: relative;
@@ -761,6 +762,80 @@ nav {
   font-weight: bold;
 }
 
+/* BLUE BORDER */
+
+.blue-border {
+  width: 100%;
+  height: 25px;
+  background: #101e43;
+}
+
+/* FOOTER STYLING */
+
+footer {
+  background: #004842;
+  border-top: solid 3px #e4e4e4;
+  padding-top: 20px;
+  font-family: 'Montserrat';
+  color: #e4e4e4;
+  height: 300px;
+}
+
+.footer-icons a i{
+  font-size: 25px;
+  margin-left: 35px;
+  margin-top: 15px;
+}
+
+.footer-menu {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  margin-right: 25px;
+  width: 100%;
+}
+
+.footer-links a {
+  font-size: 12px;
+  font-family: 'Montserrat';
+}
+
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  padding-left: 75px;
+}
+
+.contact-title {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  
+}
+
+.address {
+  margin-top: -15px;
+}
+
+.footer-contact i {
+  margin-right: 10px;
+  font-size: 25px;
+}
+
+.footer-logo img{
+  width: 100%;
+}
+
+.credits {
+  text-align: center;
+  font-size: 10px;
+  margin-top: 35px;
+  font-weight: bold;
+}
 
 
 
