--- a/css/main.css
+++ b/css/main.css
@@ -755,6 +755,7 @@ nav.solid .logo {
 .events {
     border: solid 1px #979797;
     min-height: 500px;
+    position: relative;
 }
 
 .events h2 {
@@ -763,9 +764,8 @@ nav.solid .logo {
     text-align: center;
     border-bottom: solid 1px #979797;
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 10px;
+    margin: 10px auto;
+    padding: 15px 0;
 }
 
 .events p {
@@ -775,19 +775,25 @@ nav.solid .logo {
 }
 
 .events h3 {
-  font-size: 1.15em;
-  margin-bottom: 5px;
+  font-size: 1.1em;
   font-weight: lighter;
+  margin-bottom: 0;
 }
 
 .event-date {
-  padding: 5px 20px;
+  padding: 15px 20px;
 }
 
-.event-date:nth-child(even) {
+.event-date:nth-child(odd) {
   background-color: #f3bacb;
 }
 
+.event-wrapper {
+  position: absolute;
+  width: 100%;
+  top: 100%;
+  transform: translateY(-100%);
+}
 /* TESTIMONIALS SECTION STYLING */
 
 #testimonials h1 {
